--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Aqui estão três links de exemplo:</p>
 
     <ul>
-        <li><a href="https://www.google.com" target="_blank">Google</a></li>
+        <li><a href="Desafio 7.html" target="_blank">Desafio 7</a></li>
         <li><a href="https://www.wikipedia.org" target="_blank">Wikipedia</a></li>
         <li><a href="https://www.github.com" target="_blank">GitHub</a></li>
     </ul>
