--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <ul>
         <li><a href="Desafio 7.html" target="_blank">Desafio 7</a></li>
-        <li><a href="https://elisa-amorim.github.io/ManipulacaoBancoDados/Desafio%206.html" target="_blank">Desafio 6</a></li>
+        <li><a href="=ManipulacaoBancoDados/Desafio%206.html" target="_blank">Desafio 6</a></li>
         <li><a href="https://www.github.com" target="_blank">GitHub</a></li>
     </ul>
 </body>
